2007-07-12  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* PropertyDescriptor.cs: GetEditor: We have to check the property
	  itself for attributes as well, not only the property type.
	* TypeDescriptor.cs: Make a couple of methods internal so that
	  PropertyDescriptor can use them.

2007-07-12  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TypeDescriptor.cs: GetEditor: Make sure the static constructor of the
	  editors basetype is called, since that's where we're initializing
	  the editor table.

2007-07-11  Igor Zelmanovich <igorz@mainsoft.com>

	* ReflectionPropertyDescriptor: fixed ShouldSerializeValue:
	MSDN: If this method cannot find a DefaultValueAttribute or 
	a ShouldSerializeMyProperty method, it cannot create optimizations 
	and it returns true.

2007-07-11  Igor Zelmanovich <igorz@mainsoft.com>

	* ReflectionPropertyDescriptor: fixed ShouldSerializeValue:
	avoid NullReferenceException.

2007-07-10  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TypeDescriptor.cs: Implemented AddEditorTable, and check the editor
	  table in GetEditor if no editor can be found using attributes.

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* PropertyDescriptorCollection.cs: Added missing explicit interface
	implementation of IEnumerable.GetEnumerator.
	* TypeDescriptor.cs: Params modifier applies to 1.0 profile as well.
	Spaces to tabs.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* LookupBindingPropertiesAttribute.cs:
	  Should be sealed. Implemented GetHashCode().

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* ContainerFilterService.cs CustomTypeDescriptor.cs
	  InstanceCreationEditor.cs InvalidAsynchronousStateException.cs
	  MultilineStringConverter.cs NestedContainer.cs
	  NullableConverter.cs TypeDescriptionProvider.cs
	  TypeDescriptionProviderAttribute.cs :
	  2.0 stubs except for [Obsolete].
	* TypeDescriptor.cs : added missing 2.0 members.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>
