@@ -1,3 +1,8 @@
+2007-07-16  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* PropertyDescriptorTests.cs: Added test for ShouldSerializeValue
+	behavior with read-only properties.
+
 2007-07-13  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* PropertyDescriptorTests.cs: Added tests for Igor's fixes for
